Changes in version 1.9.2 beta (2010-06-01):
--------------------------------------------
- Switched to use wxXmlSerializer 1.3.2:
  - Error states/messages aren't displayed by using messageboxes no more. Use wxXmlSerializer::GetErrMessage()
    instead if needed.
  - Serialized data members can be converted to wxVariant (if data type is supported) via xsProperty::ToVariant()
    member function.
	
- Fixed possible crash occured during loading of projects containing shape classes which are not currently known (declared) in the application.
- Added missing include in ScaledDC.h file preventing wxSF from build if precompiled header were used.
- Added new helper macro SF_ADD_COMPONENT(comp, name) usefull when a shape's component should be added to its parent
  by the parent itself and not by serializer/diagram manager (typically in constructor of so called composite shape).
- Fixed build error occured during compilation of wxSFDemo sample project on wxWidgets without defined wxOPEN and wxSAVE symbols.

Changes in version 1.9.1 beta (2010-01-15):
--------------------------------------------
- Switched to use wxXmlSerializer 1.3.1:
  - IDs of child items which aren't created directly by the serializer are now properly set by xsSerializable::AddChild() function.
  - Fixed function wxXmlSerializer::GetNewId().
  - Minor code clean-up.

- Fixed mismatch in allocation and deallocation in wxSFScaledDC::DoDrawLines() function (patch by ettlmartin a.k.a orbitcowboy).
- Implemented new events used in shapes (emited from shapes and redirected to shape canvas). The new events are: wxEVT_SF_SHAPE_LEFT_DOWN,
  wxEVT_SF_SHAPE_LEFT_DCLICK, wxEVT_SF_SHAPE_RIGHT_DOWN, wxEVT_SF_SHAPE_RIGHT_DCLICK, wxEVT_SF_SHAPE_MOUSE_ENTER, wxEVT_SF_SHAPE_MOUSE_OVER,
  wxEVT_SF_SHAPE_MOUSE_LEAVE, wxEVT_SF_SHAPE_HANDLE_BEGIN, wxEVT_SF_SHAPE_HANDLE, wxEVT_SF_SHAPE_HANDLE_END, wxEVT_SF_SHAPE_DRAG_BEGIN,